cloudformation/security-group.yml
AWSTemplateFormatVersion: 2010-09-09
Description: >
  This template contains the security groups required by our entire stack.
  We create them in a separate nested template, so they can be referenced
  by all of the other nested templates.
Parameters:
  EnvironmentName:
    Description: An environment name that will be prefixed to resource names
    Type: String

  VPC:
    Type: AWS::EC2::VPC::Id
    Description: Choose which VPC the security groups should be deployed to

Resources:
  # This security group defines who/where is allowed to access the ECS hosts directly.
  # If you want to SSH into the hosts, or expose non-load balanced services you can open 
  # their ports here.
  ECSHostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Access to the ECS hosts and the tasks/containers that run on them
      SecurityGroupIngress:
        # Only allow inbound access to ECS from the ELB
        - CidrIp: 0.0.0.0/0
          FromPort: 21116
          ToPort: 21116
          IpProtocol: tcp
        - CidrIp: 0.0.0.0/0
          FromPort: 21116
          ToPort: 21116
          IpProtocol: udp
        - CidrIp: 0.0.0.0/0
          FromPort: 21115
          ToPort: 21115
          IpProtocol: tcp
        - CidrIp: 0.0.0.0/0
          FromPort: 21118
          ToPort: 21118
          IpProtocol: tcp
        - CidrIp: 0.0.0.0/0
          FromPort: 21117
          ToPort: 21117
          IpProtocol: tcp
        - CidrIp: 0.0.0.0/0
          FromPort: 21119
          ToPort: 21119
          IpProtocol: tcp
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-ECS-Hosts

Outputs:
  ECSHostSecurityGroup:
    Description: A reference to the security group for ECS hosts
    Value: !Ref ECSHostSecurityGroup
